--- a/run/resources/public/assets/css/re-com.css
+++ b/run/resources/public/assets/css/re-com.css
@@ -37,7 +37,19 @@ html, body {
     font-family: Segoe UI, Roboto, sans-serif;
 }
 
+/* .popover-title {
+    font-weight: normal;
+} */
+
+/* fixed for bootstrap 4 */
+
 .popover-title {
+		padding: 8px 14px;
+		margin: 0;
+		font-size: 14px;
+		background-color: #f7f7f7;
+		border-bottom: 1px solid #ebebeb;
+		border-radius: 5px 5px 0 0;
     font-weight: normal;
 }
 
@@ -1164,6 +1176,11 @@ code {
 
 .rc-info-button:hover {
     fill:  #2962ff;
+}
+
+/* fixed for bootstrap 4 */
+.popover-content {
+    padding: 9px 14px;
 }
 
 .popover-content .info-heading {
